[package]
name = "riscv-rtos"
version = "0.1.0"
authors = ["Carl Hurd <carl@basilisklabs.com>"]
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
bsp_hifive = ["hifive1", "e310x-hal", "riscv", "riscv-rt", "nb", "lock_api"]
bsp_maix_m1w = ["k210-hal", "riscv", "riscv-rt", "nb", "lock_api"]

[dependencies]
hifive1 = {version = "0.9.0", features = ["board-hifive1-revb"], optional = true}
e310x-hal = {version = "0.9.0", optional = true}
k210-hal = {path = "../k210-hal", optional = true}
riscv = {version = "0.6.0", optional = true}
riscv-rt = {version = "0.8.0", optional = true}
nb = {version = "1.0.0", optional = true}
lock_api = {version = "0.4.2", optional = true, features = ["nightly"]}